[gd_scene load_steps=16 format=3 uid="uid://dyftg85otyil"]

[ext_resource type="Script" uid="uid://bmmhbr22iup2d" path="res://scripts/world/main.gd" id="1_dpppr"]
[ext_resource type="PackedScene" uid="uid://b8hnbwt0gfqgx" path="res://scenes/world/environment.tscn" id="2_40x7k"]
[ext_resource type="PackedScene" uid="uid://jkp5gvu52u1o" path="res://scenes/player/player.tscn" id="2_estr2"]
[ext_resource type="Script" uid="uid://dhjvv4781r048" path="res://scripts/lane_objects/Spawner.gd" id="3_8671u"]
[ext_resource type="PackedScene" uid="uid://b7kvvc8waf021" path="res://scenes/lane_objects/obstacles/summerTrees.tscn" id="4_f0icx"]
[ext_resource type="PackedScene" uid="uid://cqcmrldguya81" path="res://scenes/lane_objects/obstacles/ghost.tscn" id="5_8dw8u"]
[ext_resource type="PackedScene" uid="uid://cfgyqhgaajthv" path="res://scenes/world/lane_spawn_timer.tscn" id="5_k6s3k"]
[ext_resource type="PackedScene" uid="uid://7v0ou44u3gdb" path="res://scenes/world/decoration/tree_spawner.tscn" id="5_muapc"]
[ext_resource type="PackedScene" uid="uid://db86y3xlsmqhs" path="res://scenes/lane_objects/collectables/leaf.tscn" id="6_kmdbv"]
[ext_resource type="PackedScene" uid="uid://bo3apvyv0kqo2" path="res://scenes/lane_objects/collectables/heart.tscn" id="7_0t3xx"]
[ext_resource type="PackedScene" uid="uid://bdkni105yimiq" path="res://scenes/world/enviornment/trees_static.tscn" id="11_d7lc8"]
[ext_resource type="PackedScene" uid="uid://cikhnrmajljah" path="res://scenes/world/BackgroundMusic.tscn" id="11_xtfam"]
[ext_resource type="AudioStream" uid="uid://b7k0lpe44nelp" path="res://assets/audio/ambience/Summer (1 and 2).mp3" id="12_k6s3k"]
[ext_resource type="PackedScene" uid="uid://4mplcxp2vl13" path="res://scenes/world/player_locator.tscn" id="14_uvtmw"]

[sub_resource type="Environment" id="Environment_3602c"]
background_mode = 1
background_color = Color(0.3647059, 0.6901961, 0.8509804, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_dpppr")

[node name="Ground" parent="." instance=ExtResource("2_40x7k")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
light_energy = 0.05
shadow_enabled = true

[node name="PlayerLocator" parent="." instance=ExtResource("14_uvtmw")]

[node name="Player" parent="." groups=["Player"] instance=ExtResource("2_estr2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.339999, 19.610004)

[node name="Obstacles" type="Node3D" parent="."]

[node name="Items" type="Node3D" parent="."]

[node name="TreeSpawner" parent="." instance=ExtResource("5_muapc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.817741)

[node name="LaneSpawnTimer" parent="." instance=ExtResource("5_k6s3k")]

[node name="Spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.817741)
script = ExtResource("3_8671u")
tree_inst = ExtResource("4_f0icx")
ghost_inst = ExtResource("5_8dw8u")
leaf_inst = ExtResource("6_kmdbv")
heart_inst = ExtResource("7_0t3xx")

[node name="Lane0" type="Marker3D" parent="Spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 0)

[node name="Lane1" type="Marker3D" parent="Spawner"]

[node name="Lane2" type="Marker3D" parent="Spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)

[node name="TreesStatic" parent="." instance=ExtResource("11_d7lc8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0045776367, 0.9870453, -0.021865845)

[node name="Backgroundmusic" parent="." instance=ExtResource("11_xtfam")]
stream = ExtResource("12_k6s3k")
volume_db = -10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3602c")

[connection signal="timeout" from="LaneSpawnTimer" to="." method="_on_lane_spawn_timer_timeout"]
